# 2BFAIR-framework

./: .flake8rc  .gitignore  .travis.yml  CHANGELOG.md  MAINTAINERS.md  Makefile  Makefile.conf  README.md  dev_requirements.txt  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  requirements_default_backend.txt  setup.cfg  setup.py  tobefair_backend_dev_requirements.tx  tobefair_backend_requirements.txt
.github/: CODEOWNERS  CONTRIBUTING.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: conf.py  index.md
docs/source/: wealth_dynamics_md.md
tests/configuration/: test_configuration.py
tests/data_for_testing/: fairness_evaluation_response.json  mock_community_metadata_standards.json  mocks.py  pangaea-metadata-in-schema.org.json  pangaea_digital_object.json  sample_evaluated_metadata_response.py  sample_html_response.py
tests/evaluators/: fairness_principle_evaluation_tester.py  test_main_identifiers.py  test_notification_registry.py
tests/framework/: test_configuration_file_dao.py  test_digital_object_collector.py  test_metadata_standard.py
tests/service/: test_configuration_endpoint.py  test_evaluator_response.py  test_fairness_evaluation_controller.py  test_metadata_in_response.py  test_result_order.py
tests/utils/: manage_digital_object.py  manage_fairness_response.py  test_data_collector.py  test_dict_utils.py  test_request_helper.py
tobefair-frontend/: .editorconfig  .gitignore  Dockerfile  README.md  angular.json  eslint.config.mjs  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
tobefair-frontend/scripts/: build.sh
tobefair-frontend/server/: package.json  server.js
tobefair-frontend/src/: index.html  main.ts  styles.css
tobefair-frontend/types/: carbon-icons.d.ts
tobefair_backend/: constants.py
tobefair_backend/collector/: digital_object_collector_from_url.py  metadata_collector_schemaorg_jsonld.py  metadata_source_repository_app.py
tobefair_backend/config/: fairness_configuration.json
tobefair_backend/database/: metadata_formats.json  metadata_offering_methods.json  metadata_sources.json  metadata_standards.json  standard_uri_protocols.json
tobefair_backend/model/: file_format.py  response_header_wrapper.py  response_wrapper.py  uri_protocol.py
tobefair_backend/principle_evaluators/: accessible_usage_license_evaluator.py  community_metadata_evaluator.py  data_content_metadata_evaluator.py  detailed_provenance_metadata_evaluator.py  fairness_test.py  formal_metadata_evaluator.py  identifier_in_metadata_evaluator.py  machine_accessible_metadata_evaluator.py  metadata_richness_evaluator.py  metadata_uses_semantic_resources.py  standardized_protocol_evaluator.py  (+1 more)
tobefair_framework/: framework_constants.py  module.py
(+185 files in other folders)
